--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
-<%= provide :page_title, 'Home' %>
-<% provide :page_title %>
+<% currently_at ('menu.home') %>
+<% provide :page_title, ('Home') %>
 
 <h1>Project</h1>
 
- &copy; А.С <%= Time.now.year %>
+&copy; А.С <%= Time.now.year %>
