--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, @question.title %>
+<% currently_at t('menu.questions') %>
+
 <h1 class="mb-4"><%= @question.title %></h1>
 
 <time datetime="<%= @question.formatted_created_at %>">
@@ -32,13 +35,5 @@
 
 <h2 class"mt-5">Answers</h2>
 
-<% @answers.each do |answer| %>
-  <article class="mb-3">
-    <p>
-    <%= answer.body %>
-    <p>
-
-    <%= link_to "Delete", question_answer_path(@question, answer), class: 'btn btn-danger btn-sm', :method => :delete %>
-    <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-secondary' %>
-  </article>
-<% end %>
+<%= render partial: 'answers/answer', collection: @answers,
+as: :answer, locals: {question: @question} %>
