--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -13,11 +13,15 @@
         <% if user_signed_in? %>
           <li>
             <a class="nav-link px-2 text-white" href="#">
-              <%= current_user.name%>
+              <%= current_user.name_or_email %>
             </a>
           </li>
         <% else %>
-          <li><%= nav_tab 'Sign Up', new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <li><%= nav_tab 'Sign Up', new_user_path,
+           class: 'nav-link px-2', current_page: current_page %></li>
+
+           <li><%= nav_tab 'Log In', new_session_path,
+           class: 'nav-link px-2', current_page: current_page %></li>
         <% end %>
       </ul>
       </nav>
