--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -11,10 +11,14 @@
 
       <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
         <% if user_signed_in? %>
-          <li>
-            <a class="nav-link px-2 text-white" href="#">
-              <%= current_user.name_or_email %>
-            </a>
+          <li class="dropdown">
+          <%= nav_tab current_user.name_or_email, '#',
+            class: 'nav-link px-2 dropdown-toggle',
+            data: {"bs-toggle": 'dropdown'}, current_page: current_page %>
+          
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Log Out', '#', class: 'dropdown-item' %>
+            </ul>
           </li>
         <% else %>
           <li><%= nav_tab 'Sign Up', new_user_path,
