--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -17,6 +17,10 @@
           <small><%= question.formatted_created_at %></small>
         </time>
 
+        <div class="my-2">
+          <%= render question_tags %>
+        <div>
+
         <p class="my-3">
           <%= truncate strip_tags(question.body), length: 100, omission: '...[продолжение]' %>
         </p>
